--- a/src/styles/Home.scss
+++ b/src/styles/Home.scss
@@ -7,7 +7,7 @@ div.Home {
 		font-weight: 600;
 		font-size: 24px;
 		color: rgb(149, 41, 20);
-        margin-bottom: 2rem;
+		margin-bottom: 2rem;
 
 		span {
 			display: flex;
@@ -21,9 +21,9 @@ div.Home {
 		width: min(1000px, 90%);
 		margin: 0 auto;
 		display: flex;
-        border: 3px solid rgba(white, .2);
-        padding: 1rem 1.5rem 0 1.5rem;
-        border-radius: 12px;
+		border: 3px solid rgba(white, 0.2);
+		padding: 1rem 1.5rem 0 1.5rem;
+		border-radius: 12px;
 
 		.avatarContainer {
 			height: 400px;
@@ -35,55 +35,101 @@ div.Home {
 			justify-content: center;
 			align-items: center;
 
+			.avatarRenderMobile {
+				display: none;
+			}
+
 			.avatarOffset {
 				flex: 2;
 			}
-			.image-container {
-				flex: 8;
-				display: flex;
-				justify-content: center;
-				align-items: center;
+			.avatarRenderDesktop {
+				display: block;
 
-				img {
-					object-fit: contain;
+				.image-container {
+					flex: 8;
+					display: flex;
+					justify-content: center;
+					align-items: center;
+
+					img {
+						object-fit: contain;
+					}
 				}
 			}
 		}
 
 		.suggestionsContainer {
 			flex: 5;
-            // border: 3px solid red;
+			// border: 3px solid red;
 
-            .suggestionsTitle {
-                font-weight: 600;
-                font-size: 20px;
-            }
+			.suggestionsTitle {
+				font-weight: 600;
+				font-size: 20px;
+			}
 
-            .suggestionActivities {
-                display: flex;
-                flex-direction: column;
-                gap: 1rem;
-                width: 80%;
-                margin: 1rem auto 0 auto;
+			.suggestionActivities {
+				display: flex;
+				flex-direction: column;
+				gap: 1rem;
+				width: 80%;
+				margin: 1rem auto 0 auto;
 
-                .activity {
-                    padding: 1rem .5rem;
-                    background-color: rgba(white, .3);
-                    border: 4px solid transparent;
-                    border-radius: 8px;
-                    cursor: pointer;
-                    transition: all .3s ease;
-                    transform: translateY(0);
+				.activity {
+					padding: 1rem 0.5rem;
+					background-color: rgba(white, 0.3);
+					border: 4px solid transparent;
+					border-radius: 8px;
+					cursor: pointer;
+					transition: all 0.3s ease;
+					transform: translateY(0);
 
-                    &:hover {
-                        background-color: rgba(white, .4);
-                        border: 4px solid rgba(white, .6);
-                        border-style: dotted;
-                        transform: translateY(-1px);
-                        box-shadow: 0px 1px 10px 4px rgba(rgb(55, 55, 55), .1);
-                    }
-                }
-            }
+					&:hover {
+						background-color: rgba(white, 0.4);
+						border: 4px solid rgba(white, 0.6);
+						border-style: dotted;
+						transform: translateY(-1px);
+						box-shadow: 0px 1px 10px 4px rgba(rgb(55, 55, 55), 0.1);
+					}
+				}
+			}
+		}
+	}
+}
+
+@media screen and (max-width: 600px) {
+	.mainContent {
+		flex-direction: column;
+		border: none !important;
+
+		.avatarContainer {
+			.avatarOffset {
+				flex: 0;
+			}
+			.avatarRenderDesktop {
+				display: none !important;
+			}
+
+			.avatarRenderMobile {
+				display: block !important;
+
+				.image-container {
+					flex: 8;
+					display: flex;
+					justify-content: center;
+					align-items: center;
+
+					img {
+						object-fit: contain;
+					}
+				}
+			}
+		}
+
+		.suggestionsContainer {
+			padding: 2rem 0.5rem;
+			background-color: rgba(white, .05);
+			border: 6px solid rgba(white, 0.2);
+			border-radius: 12px;
 		}
 	}
 }
